--- a/site/src/layouts/Base.astro
+++ b/site/src/layouts/Base.astro
@@ -16,6 +16,7 @@ const canonicalUrl = Astro.url.href;
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content={pageDescription} />
   <meta name="robots" content="noai, noimageai" />
+  <meta name="generator" content={Astro.generator} />
   <title>{pageTitle}</title>
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <link rel="canonical" href={canonicalUrl} />
